added additional technical information

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo/rs.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
+    <meta name="msapplication-TileColor" content="#c13000" />
+    <meta name="theme-color" content="#c13000" />
+    <meta name="og:title" content="Центр Молодёжной Робототехники" />
+    <meta name="description" content="Информация о центре" />
+    <meta name="og:description" content="Информация о центре" />
     <title>Центр молодёжной робототехники</title>
   </head>
   <body>
